WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37263
[v8] SerializedScriptValue fails to deserialize an Object that has prototype with properties
https://bugs.webkit.org/show_bug.cgi?id=37263
Summary
[v8] SerializedScriptValue fails to deserialize an Object that has prototype ...
Yury Semikhatsky
Reported
2010-04-08 05:11:42 PDT
SerializedScriptValue fails to deserialize an Object that has prototype with properties. Try to serialize and the deserialize object with the following constructor: InjectedScript.CallFrameProxy = function(id) { this.id = id; } InjectedScript.CallFrameProxy.prototype = { _wrapScopeChain: function(callFrame) {} }
Attachments
proposed fix
(1.21 KB, patch)
2010-04-08 05:15 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
patch
(4.31 KB, patch)
2010-04-08 06:37 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
patch
(4.23 KB, patch)
2010-04-08 06:44 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-04-08 05:15:31 PDT
Created
attachment 52853
[details]
proposed fix
Yury Semikhatsky
Comment 2
2010-04-08 06:37:59 PDT
Created
attachment 52857
[details]
patch
Yury Semikhatsky
Comment 3
2010-04-08 06:44:45 PDT
Created
attachment 52859
[details]
patch Moved ++m_numSerializedProperties; after property names serialization according to vitalyr feedback.
Yury Semikhatsky
Comment 4
2010-04-08 07:28:49 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog M LayoutTests/fast/dom/Window/window-postmessage-clone-expected.txt M LayoutTests/fast/dom/Window/window-postmessage-clone.html M WebCore/ChangeLog M WebCore/bindings/v8/SerializedScriptValue.cpp Committed
r57276
Vitaly Repeshko
Comment 5
2010-04-08 08:10:45 PDT
(In reply to
comment #4
)
> Committing to
http://svn.webkit.org/repository/webkit/trunk
... > M LayoutTests/ChangeLog > M LayoutTests/fast/dom/Window/window-postmessage-clone-expected.txt > M LayoutTests/fast/dom/Window/window-postmessage-clone.html > M WebCore/ChangeLog > M WebCore/bindings/v8/SerializedScriptValue.cpp > Committed
r57276
Thanks a lot for fixing this!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug