2010-04-08  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Correctly save number of properties when object being serialized
        have properties in its prorotype.

        https://bugs.webkit.org/show_bug.cgi?id=37263

        * bindings/v8/SerializedScriptValue.cpp:
        (WebCore::ZigZag::Serializer::AbstractObjectState::AbstractObjectState):
        (WebCore::ZigZag::Serializer::AbstractObjectState::advance):

2010-04-08  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Test that object with ptototype can be sent as message.

        https://bugs.webkit.org/show_bug.cgi?id=37263

        * fast/dom/Window/window-postmessage-clone-expected.txt:
        * fast/dom/Window/window-postmessage-clone.html:


Canonical link: https://commits.webkit.org/48569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57276 268f45cc-cd09-0410-ab3c-d52691b4dbfc